--- a/.github/workflows/main_dotnet0001.yml
+++ b/.github/workflows/main_dotnet0001.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/WebApplication1.sln
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/WebApplication1
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
