--- a/.github/workflows/main_dotnet0001.yml
+++ b/.github/workflows/main_dotnet0001.yml
@@ -26,13 +26,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/WebApplication1
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/WebApplication1.sln
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/WebApplication1.sln
+          path: ${{env.DOTNET_ROOT}}/WebApplication1
 
   deploy:
     runs-on: ubuntu-latest
