--- a/.github/workflows/main_dotnet0001.yml
+++ b/.github/workflows/main_dotnet0001.yml
@@ -23,7 +23,7 @@ jobs:
         run: dotnet build WebApplication1 --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish WebApplication1 -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish WebApplication1.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
